# recursive-improve

./: .gitignore  README.md  pyproject.toml
recursive_improve/: cli.py
recursive_improve/data/: EVOLVE_SKILL.md
recursive_improve/evolve/: __init__.py  engine.py  island.py  status.py
recursive_improve/ratchet/: config.py
